#37 Initial implementation of runnable to check the subscriptions
Signed-off-by: Alessio <slux83@gmail.com>